<resources>
    <string name="app_name">Spaceball!</string>
    <string name="game_name">Spaceball!</string>
    <string name="developers">Developed by Justin and Nash</string>
    <string name="buttonStart">Start!</string>
    <string name="buttonHighscores">High Scores</string>
    <string name="time_up">Time up!</string>
    <string name="buttonPlayAgain">Play Again</string>
    <string name="buttonBacktomenu">Main menu</string>
    <string name="saveScore">Save Score!</string>
    <string name="enterName">Enter your name</string>
</resources>
