<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--Background image/color-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:clickable="false">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_name"
            android:textColor="@color/white"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/buttonStart"
            android:onClick="onclickButtonStart"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/buttonHighscores"
            android:onClick="onclickButtonHighScores"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/developers"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>