<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/constraintLayoutRoot"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black" />

    <TextView
        android:id="@+id/padding"
        android:layout_width="5dp"
        android:layout_height="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button

        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/padding"
        app:layout_constraintRight_toLeftOf="@+id/padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:background="@drawable/reset_button_style"
        android:textColor="@color/white"
        android:drawableStart="@drawable/reset_icon"

        android:onClick="onclickButtonReset"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:text="@string/game_name" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:text="@string/game_name" />

    <LinearLayout
        android:id="@+id/endScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_up"
            android:textColor="@color/white"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/developers"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/buttonPlayAgain"
            android:onClick="onclickButtonAgain"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/buttonBacktomenu"
            android:onClick="onclickButtonMenu"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/buttonHighscores"
            android:onClick="onclickButtonHighScores"/>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>